# solar_epc_erp

./: README.md  pyproject.toml
custom_solar/: hooks.py  modules.txt
custom_solar/custom_solar/doctype/acdb/: acdb.js  acdb.json  acdb.py  test_acdb.py
custom_solar/custom_solar/doctype/circuit_breaker/: circuit_breaker.js  circuit_breaker.json  circuit_breaker.py  test_circuit_breaker.py
custom_solar/custom_solar/doctype/clamp/: clamp.js  clamp.json  clamp.py  test_clamp.py
custom_solar/custom_solar/doctype/company_details/: company_details.js  company_details.json  company_details.py  test_company_details.py
custom_solar/custom_solar/doctype/dcdb/: dcdb.js  dcdb.json  dcdb.py  test_dcdb.py
custom_solar/custom_solar/doctype/earthing_kit/: earthing_kit.js  earthing_kit.json  earthing_kit.py  test_earthing_kit.py
custom_solar/custom_solar/doctype/elbow/: elbow.js  elbow.json  elbow.py  test_elbow.py
custom_solar/custom_solar/doctype/electricity_provider/: electricity_provider.js  electricity_provider.json  electricity_provider.py  test_electricity_provider.py
custom_solar/custom_solar/doctype/fasteners/: fasteners.js  fasteners.json  fasteners.py  test_fasteners.py
custom_solar/custom_solar/doctype/inverter/: inverter.js  inverter.json  inverter.py  test_inverter.py
custom_solar/custom_solar/doctype/inverter_company/: inverter_company.js  inverter_company.json  inverter_company.py  test_inverter_company.py
custom_solar/custom_solar/doctype/leads/: leads.js  leads.json  leads.py  leads_list.js  test_leads.py
(+64 files in other folders)
